--- a/package.json
+++ b/package.json
@@ -10,6 +10,11 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/tailwind": "^1.0.0",
     "astro": "^1.2.1"
+  },
+  "devDependencies": {
+    "@tailwindcss/aspect-ratio": "^0.4.2",
+    "sass": "^1.54.9"
   }
 }
