--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@astrojs/mdx": "^0.11.1",
+    "@astrojs/netlify": "^1.0.4",
     "@astrojs/tailwind": "^1.0.0",
     "astro": "^1.2.1",
     "astro-imagetools": "^0.6.10"
